# DevOpsIndividual

ind1/: string_operations.py
ind2/: csv_saver.py  data_saver.py  desired_performance.py  json_saver.py  main.py  performance.py  real_performance.py  student_data.py  xml_saver.py
ind2/saver/: csv_saver.py  data_saver.py  json_saver.py  xml_saver.py
ind3/: cli_tool.py  fire_expose.py  sys_tool.py  utils.py
ind4/: CHANGELOG.md  README.md  pyproject.toml  test_server.py
ind5/: app.py  upd_server.py
ind6/tests/: test_app.py
